# Exam

./: Cargo.toml  Dockerfile  compose.yaml
server/: Cargo.toml
server/src/: main.rs
server/src/models/: mod.rs  model.rs  startwars.rs
