[package]
name = "Server"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-rt = "2.9.0"
actix-service = "2.0"
actix-web = {version = "4.5", features = ["openssl"]}
actix-web-httpauth = "0.8.1"
alcoholic_jwt = "4091.0.0"
async-graphql = { version = "7.0.3", features = ["dynamic-schema"] }
async-graphql-actix-web = "7.0.3"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "2.1.6", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
futures = "0.3.1"
futures-util = "0.3.30"
r2d2 = "0.8.8"
reqwest = "0.12.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.116"
tokio = "1.37.0"
slab = "0.4.9"


